// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h2
  className="Typography__TypographyWrapper-sc-12agh80-0 bOtZww sinoui-typography sinoui-typography--h2"
  color="textPrimary"
  type="h2"
>
  H2
</h2>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 bOtZww sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 hHcDLA sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 geTmxF sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 fqUBBM sinoui-typography sinoui-typography--h2"
    color="success"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 biGbeo sinoui-typography sinoui-typography--h2 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 bOtZww sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 JPRWr sinoui-typography sinoui-typography--h2"
    color="primary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 bTXQWw sinoui-typography sinoui-typography--h2"
    color="secondary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 bOtZww sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 bZyxrJ sinoui-typography sinoui-typography--h2"
    color="textSecondary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 bIUhGh sinoui-typography sinoui-typography--h2"
    color="error"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 dpFkgo sinoui-typography sinoui-typography--h2"
    color="warning"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 fqUBBM sinoui-typography sinoui-typography--h2"
    color="success"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 igcCdI sinoui-typography sinoui-typography--h2"
    color="info"
    type="h2"
  >
    H2
  </h2>,
]
`;
